# quvac

./: .buildinfo  .gitignore  README.md  api.html  for_developers.html  genindex.html  implementation.html  index.html  input_file.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  tutorials.html  usage.html
.doctrees/: api.doctree  environment.pickle  for_developers.doctree  implementation.doctree  index.doctree  input_file.doctree  installation.doctree  tutorials.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/quvac/: index.doctree
.doctrees/autoapi/quvac/analytic_scalings/: index.doctree
.doctrees/autoapi/quvac/config/: index.doctree
.doctrees/autoapi/quvac/field/: index.doctree
.doctrees/autoapi/quvac/field/abc/: index.doctree
.doctrees/autoapi/quvac/field/dipole/: index.doctree
.doctrees/autoapi/quvac/field/external_field/: index.doctree
.doctrees/autoapi/quvac/field/gaussian/: index.doctree
.doctrees/autoapi/quvac/field/laguerre_gaussian/: index.doctree
.doctrees/autoapi/quvac/field/maxwell/: index.doctree
.doctrees/autoapi/quvac/field/model/: index.doctree
.doctrees/autoapi/quvac/field/planewave/: index.doctree
.doctrees/autoapi/quvac/field/utils/: index.doctree
.doctrees/autoapi/quvac/grid/: index.doctree
.doctrees/autoapi/quvac/integrator/: index.doctree
.doctrees/autoapi/quvac/integrator/abc/: index.doctree
.doctrees/autoapi/quvac/integrator/vacuum_emission/: index.doctree
.doctrees/autoapi/quvac/log/: index.doctree
.doctrees/autoapi/quvac/parallel/: index.doctree
.doctrees/autoapi/quvac/plotting/: index.doctree
.doctrees/autoapi/quvac/postprocess/: index.doctree
.doctrees/autoapi/quvac/pyfftw_executor/: index.doctree
.doctrees/autoapi/quvac/simulation/: index.doctree
.doctrees/autoapi/quvac/simulation_parallel/: index.doctree
.doctrees/autoapi/quvac/utils/: index.doctree
.github/workflows/: coverage.yml  sphinx.yaml  sphinx.yml  tests.yml
_modules/: index.html  quvac.html
_modules/quvac/: analytic_scalings.html  grid.html  log.html  parallel.html  plotting.html  postprocess.html  pyfftw_executor.html  simulation.html  simulation_parallel.html  utils.html
_modules/quvac/field/: abc.html  dipole.html  external_field.html  gaussian.html  laguerre_gaussian.html  maxwell.html  model.html  planewave.html  utils.html
_modules/quvac/integrator/: abc.html  vacuum_emission.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  tutorials.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/quvac/: index.rst.txt
_sources/autoapi/quvac/analytic_scalings/: index.rst.txt
_sources/autoapi/quvac/config/: index.rst.txt
_sources/autoapi/quvac/field/: index.rst.txt
_sources/autoapi/quvac/field/abc/: index.rst.txt
_sources/autoapi/quvac/field/dipole/: index.rst.txt
_sources/autoapi/quvac/field/external_field/: index.rst.txt
_sources/autoapi/quvac/field/gaussian/: index.rst.txt
_sources/autoapi/quvac/field/laguerre_gaussian/: index.rst.txt
_sources/autoapi/quvac/grid/: index.rst.txt
_sources/autoapi/quvac/integrator/: index.rst.txt
_sources/autoapi/quvac/log/: index.rst.txt
_sources/autoapi/quvac/parallel/: index.rst.txt
_sources/autoapi/quvac/plotting/: index.rst.txt
_sources/autoapi/quvac/postprocess/: index.rst.txt
_sources/autoapi/quvac/pyfftw_executor/: index.rst.txt
_sources/autoapi/quvac/simulation/: index.rst.txt
_sources/autoapi/quvac/simulation_parallel/: index.rst.txt
_sources/autoapi/quvac/utils/: index.rst.txt
autoapi/: index.html
autoapi/quvac/: index.html
autoapi/quvac/analytic_scalings/: index.html
autoapi/quvac/config/: index.html
autoapi/quvac/field/: index.html
autoapi/quvac/field/abc/: index.html
autoapi/quvac/field/dipole/: index.html
autoapi/quvac/field/external_field/: index.html
autoapi/quvac/field/gaussian/: index.html
autoapi/quvac/field/laguerre_gaussian/: index.html
autoapi/quvac/field/maxwell/: index.html
autoapi/quvac/field/model/: index.html
autoapi/quvac/field/planewave/: index.html
autoapi/quvac/field/utils/: index.html
autoapi/quvac/grid/: index.html
autoapi/quvac/integrator/: index.html
autoapi/quvac/integrator/abc/: index.html
autoapi/quvac/integrator/vacuum_emission/: index.html
autoapi/quvac/log/: index.html
autoapi/quvac/parallel/: index.html
autoapi/quvac/plotting/: index.html
autoapi/quvac/postprocess/: index.html
autoapi/quvac/pyfftw_executor/: index.html
autoapi/quvac/simulation/: index.html
autoapi/quvac/simulation_parallel/: index.html
autoapi/quvac/utils/: index.html
docs/: requirements.txt  vacuum_emission.md
docs/source/: conf.py  implementation.rst  index.rst  input_file.rst  installation.rst  tutorials.rst  usage.rst
notebooks/: local_test.ipynb  plotting.py  test.ipynb  xfel_fields.ipynb
src/quvac/: __init__.py  analytic_scalings.py  config.py  grid.py  grid_utils.py  log.py  parallel.py  paraxial_gaussian.py  plotting.py  postprocess.py  pyfftw_executor.py  simulation.py  simulation_parallel.py  utils.py  vacuum_emission.py
src/quvac/cluster/: config.py  fields.py  gridscan.py  optimization.py
src/quvac/field/: __init__.py  abc.py  dipole.py  external_field.py  gaussian.py  laguerre_gaussian.py  maxwell.py  model.py  paraxial_gaussian.py  utils.py
src/quvac/integrator/: abc.py  vacuum_emission.py
tests/: _test_maxwell.py  bench_gridscan.py  bench_optimization.py  bench_profiler.py  bench_simulation_script.py  benchmark_config.yml  config.py  config_for_tests.py  default_config.yml  test_VE_paraxial.py  test_channels.py  test_field.py  test_grid.py  test_gridscan.py  test_maxwell.py  test_optimization.py  test_quvac_vacem.py  test_simulation.py  test_simulation_script.py  test_spherical_grid.py
tests/unused/: _test_quvac_vacem.py
tutorials/: 1. Create external field.ipynb  2. Launch quvac simulation.ipynb  3. Postprocessing options.ipynb  4. Parallel simulation, gridscan and Bayesian optimization.ipynb  Add new field to quvac.md
(+6 files in other folders)
