[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quvac"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
  "numexpr",
  "pyfftw",
  "tqdm",
  "submitit",
  "pyyaml",
  "pytest",
]
requires-python = ">=3.12"
authors = [
  {name = "Maksim Valialshchikov", email = "maksim.valialshchikov@uni-jena.de"},
]
maintainers = [
]
description = "Calculate quantum vacuum signal from laser collisions."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["quantum", "vacuum", "qed", "maxwell", "electrodynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Private :: Do Not Upload"
]

[project.scripts]
quvac-simulation = "quvac:main_simulation"
quvac-simulation-parallel = "quvac:main_simulation_parallel"
quvac-gridscan = "quvac:main_gridscan"
quvac-optimization = "quvac:main_optimization"

[project.optional-dependencies]
optimization = [
  "ax-platform",
]
plot = [
    "matplotlib>=3.10.1",
]

[project.urls]
Homepage = "https://github.com/maxbalrog/quvac"
Repository = "https://github.com/maxbalrog/quvac"

[tool.uv]
default-groups = "all"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
]
unfixable = [
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
