[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quvac"
dynamic = ["version"]
dependencies = [
  "pip>=25.0",
  "numpy",
  "scipy",
  "numexpr",
  "pyfftw",
  "tqdm",
  "submitit",
  "pyyaml",
]
requires-python = ">=3.12"
authors = [
  {name = "Maksim Valialshchikov", email = "maksim.valialshchikov@uni-jena.de"},
]
maintainers = [
]
description = "Calculate quantum vacuum signal from the interaction of electromagnetic fields."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["quantum", "vacuum", "qed", "maxwell", "electrodynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]

[project.scripts]
quvac-simulation = "quvac.simulation:main_simulation"
quvac-simulation-parallel = "quvac.simulation_parallel:main_simulation_parallel"
quvac-gridscan = "quvac.cluster.gridscan:main_gridscan"
quvac-optimization = "quvac.cluster.optimization:main_optimization"

[project.optional-dependencies]
optimization = [
    "ax-platform>=1.2.3",
]
plot = [
    "matplotlib>=3.10.1",
    "jupyterlab>=4.5.3",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "scalene>=2.1.4",
    "memray>=1.19",
    "pytest-memray",
]
docs = [
    "astroid==3.3.8",
    "sphinx>=8.2.1",
    "jinja2>=3.1.0",
    "furo==2024.8.6",
    "sphinx-autoapi==3.6.0",
    "sphinx-copybutton==0.5.2",
]
light = [
    "quvac[test,plot,docs]",
]
all = [
    "quvac[test,plot,optimization,docs]",
]

[project.urls]
Homepage = "https://github.com/maxbalrog/quvac"
Repository = "https://github.com/maxbalrog/quvac"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "quvac.__version__"}

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with `-m 'not slow'`)",
    "benchmark: marks tests as becnhmarks",
]
addopts = "-m 'not slow' -m 'not benchmark' --ignore=tests/bench_optimization.py"
python_files = [
    "bench_*.py",
    "test_*.py",
]

# exclude certain scripts from coverage report
[tool.coverage.run]
omit = [
    "*/cluster/*",
    "src/quvac/analytic_scalings.py",
    "src/quvac/plotting.py",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
]
unfixable = [
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]
